examples/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: simpleapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
        - name: simpleapp
          ports:
            - containerPort: 5601
              protocol: TCP
          image: simpleapp:latest
          resources:
            limits:
              cpu: "1"
              memory: 500Mi
        - name: authproxy
          ports:
            - containerPort: 8080
              protocol: TCP
          image: ghcr.io/kongz/authproxy:latest
          resources:
            limits:
              cpu: "1"
              memory: 100Mi
      serviceAccount: simpleapp
      serviceAccountName: simpleapp
      terminationGracePeriodSeconds: 30
