examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simpleapp
  name: simpleapp
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: simpleapp
  type: ClusterIP
