examples/kubernetes/alb-google-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/auth-idp-oidc: '{ "issuer": "https://accounts.google.com",
      "authorizationEndpoint": "https://accounts.google.com/o/oauth2/v2/auth", "tokenEndpoint":
      "https://oauth2.googleapis.com/token", "userInfoEndpoint": "https://openidconnect.googleapis.com/v1/userinfo",
      "secretName": "simple-alb-oidc" }'
    alb.ingress.kubernetes.io/auth-scope: "openid email"
    alb.ingress.kubernetes.io/auth-type: oidc
    alb.ingress.kubernetes.io/certificate-arn: "${your-arn-here}"
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-2019-08
    alb.ingress.kubernetes.io/success-codes: 200,429
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: aws-lb
  labels:
    app: simpleapp
  name: simpleapp
spec:
  rules:
    - host: simpleapp.piggysec.com
      http:
        paths:
          - backend:
              service:
                name: simpleapp
                port:
                  number: 8080
            path: /*
            pathType: ImplementationSpecific
